--- a/app/src/main/res/menu/topmenu.xml
+++ b/app/src/main/res/menu/topmenu.xml
@@ -5,7 +5,12 @@
         android:title="Chat"
         app:showAsAction="never"></item>
     <item
+        android:id="@+id/Account"
+        android:title="Account"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/Logout"
         android:title="Log Out"
         app:showAsAction="never"></item>
+
 </menu>
