--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -67,13 +67,15 @@
             android:layout_marginEnd="10dp"
             android:id="@+id/editProfile"
             android:layout_alignParentRight="true">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Edit Profile"
-                android:padding="5dp"
+                android:layout_marginStart="10dp"
+                android:drawableStart="@drawable/profile"
                 android:drawablePadding="5dp"
-                android:drawableStart="@drawable/profile"/>
+                android:padding="5dp"
+                android:text="Edit Profile" />
         </RelativeLayout>
     </RelativeLayout>
 
