--- a/app/src/main/res/layout/chat_right_item.xml
+++ b/app/src/main/res/layout/chat_right_item.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/background_right"
             android:fontFamily="@font/roboto"
